--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <header></header>
     <main id="root">
 
-        <form name="myForm">
+        <form name="myForm"  onsubmit="newForm.submitHandler()">
             <label for="num">Number:</label><br>
             <input type="number" name="num1"><br><br>
-            <button type="submit" onsubmit="newForm.submitHandler">Calculate</button>
+            <button type="submit">Calculate</button>
             <button type="button">Display input</button>
     </main>
     <footer></footer>
-    <script src="app.js"></script>
+    <script type="module" src="app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 </body>
 </html>
