--- a/index.html
+++ b/index.html
@@ -5,16 +5,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="app.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 </head>
 <body>
-    <header></header>
-    <main id="root">
+    <header>
+        <nav></nav>
+    </header>
 
-        <form name="myForm"  onsubmit="newForm.submitHandler()">
-            <label for="num">Number:</label><br>
-            <input type="number" name="num1"><br><br>
-            <button type="submit">Calculate</button>
-            <button type="button">Display input</button>
+    <main id="root" class="container">
+        <section id="getName"> 
+            <p>Hello, <br>
+            What is your Name?</p>
+            <label for="userName" class="form-label m-2">Enter your name:</label><br>
+            <input id="inputUsername" name="userName" class="form-input m-4 w-50"><br>
+            <button type="button" class="btn btn-success btn-md m-3" onclick="saveName()">Save</button>
+        </section>
+
+        <div class="greeting m-4">
+        <p>Hello Brownie🙋🏼‍♀️<br>
+            Would you like to fill in a form?</p>
+    
+        <button class="btn btn-primary btn-lg m-3" onclick="showForm()">Yes</button>
+        <button class="btn btn-danger btn-sm m-3" onclick="showNo()">No</button>
+        <span id="noBtn" style="display:none;">THANK YOU, BYE!!🙋🏼‍♀️👍</span>
+        </div>
+
+    <section id="formSection">
+        <h1>Form JS Workshop</h1>
+        <form id="myForm" onsubmit="newForm.submitHandler(event)">
+            <label for="num1" class="form-label m-2">Enter a number:</label><br>
+            <input id="num1" name="num1" class="form-input m-4 w-50" oninput="newForm.checkIsNumber()"><br>
+
+            <label for="email" class="form-label m-2">Email:</label><br>
+            <input id="email" name="email" class="form-input m-4 w-50" oninput="newForm.checkIsEmail()"><br>
+
+            <span hidden id="notNumber" class="form-span m-3 bg-danger text-light">Please enter a valid number!!</span><br>
+            <span hidden id="notEmail" class="form-span m-3 bg-danger text-light">Please enter a valid email!!</span><br>
+
+            <button type="submit" class="cal-btn btn-warning m-4">Submit</button>
+            <button type="button" class="dis-btn btn-primary m-4">Display input</button>
+        </form>
+    </section>
+
+
     </main>
     <footer></footer>
     <script type="module" src="app.js"></script>
